[package]
name = "simple-server"
version = "0.1.0"
edition = "2021"
description = "A http server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-files = "*"
log = "*"
env_logger = "*"
clap = { version = "*", features = ["derive", "string"] }
